--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@
 }
 .one img {
   width: 80px;
+  border-radius: 50%;
+  border: 3px solid #fff;
 }
   .detail{
     color: hsl(236, 100%, 87%);
@@ -72,7 +74,7 @@
   border-radius: 15px;
   grid-area: two;
 }
- .two .upper {
+ .upper {
   /* border-top-left-radius: 8px;
   border-top-right-radius: 8px; */
   /* background-color: hsl(15, 100%, 70%); */
@@ -84,9 +86,9 @@
     width: 50px;
   } 
 .two-content {
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  border-radius: 15px;
   background-color: hsl(235, 46%, 20%);
+  height: 84%;
   color: #fff;
 }
   .header {
@@ -94,7 +96,7 @@
     justify-content: space-around;
     align-items: center;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
   }
   .heading {
     font-size: 18px;
@@ -103,41 +105,52 @@
   .header img {
     width: 20px;
   }
-  /* .info {
-    padding: ;
-  } */
+  .info {
+    padding-left: 20%;
+  }
+  .large-time {
+    font-size: 3em;
+    margin-bottom: 15px;
+  }
+  .time {
+    color: hsl(236, 100%, 87%);
+  }
   
 
 .three {
   background-color: hsl(195, 74%, 62%);
-  border-radius: 8px;
+  border-radius: 15px;
   grid-area: three;
 }
 
 .four {
   background-color: hsl(348, 100%, 68%);
-  border-radius: 8px;
+  border-radius: 15px;
   grid-area: four;
   
 }
 
 .five {
   background-color: hsl(145, 58%, 55%);
-  border-radius: 8px;
+  border-radius: 15px;
   grid-area: five;
   
 }
 
 .six {
   background-color: hsl(264, 64%, 52%);
-  border-radius: 8px;
+  border-radius: 15px;
   grid-area: six;
-  
 }
+  .social img {
+    width: 28px;
+  }
 
 .seven {
   background-color: hsl(43, 84%, 65%);
-  border-radius: 8px;
+  border-radius: 15px;
   grid-area: seven;
-  
 }
+ .self-care img {
+  width: 36px;
+ }
